Indicate an error when the program crashes

--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -94,6 +94,7 @@ function runit() {
         })
         .catch((error) => {
             setError(error);
+            correctnessIndicator.className = "fas fa-times";
         });
 }
 </script>
