A tiny spelling correction

--- a/nablapps/contact/templates/contact/gullkorn.html
+++ b/nablapps/contact/templates/contact/gullkorn.html
@@ -6,7 +6,7 @@
 
 <h1>Gullkorn</h1>
 
-<p>Har du hørt noe morsom på gløs? Meld det inn her, så kommer det kanskje i Nabladet!</p>
+<p>Har du hørt noe morsomt på gløs? Meld det inn her, så kommer det kanskje i Nabladet!</p>
 
 {% if spam_check == True %}
     {% bootstrap_alert "Forsøk å regne kontrollspørsmål på nytt" alert_type="danger" %}
