Fixed spelling error in arrangement

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -149,7 +149,7 @@
         <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arrangement med betaling</td>
         {% endif %}
         {% if event.penalty == 3%}
-        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arangement uten betaling</td>
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arrangement uten betaling</td>
         {% endif %}
     </tr>
     {% endif %}
