--- a/templates/base.html
+++ b/templates/base.html
@@ -253,7 +253,7 @@
                             <a class="dropdown-item" href="{% url "season_view" %}">Skråttcast</a>
                             <a class="dropdown-item" href="/referater/{% now "Y" %}">Styremøtereferater</a>
                             <a class="dropdown-item" href="{% url "albums" %}">Bildealbum</a>
-                            <a class="dropdown-item" href="{% url "code_golf_menu" %}">Kodegolf</a>
+                            <a class="dropdown-item" href="{% url "games_list" %}">Spill</a>
                             <a class="dropdown-item" href="{% url "wiki:root" %}">NablaWiki</a>
                             <a class="dropdown-item" href="{% url "news_list" %}">Nyheter</a>
                             <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
