--- a/templates/base.html
+++ b/templates/base.html
@@ -258,10 +258,8 @@
                             <a class="dropdown-item" href="{% url "wiki:root" %}">NablaWiki</a>
                             <a class="dropdown-item" href="{% url "news_list" %}">Nyheter</a>
                             <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
-                            <a class="dropdown-item" href="/julekalender/2020/">Julekalender 2020</a>
-{% comment %}
-                            <a class="dropdown-item" href="{% url "advent_calendar" "2020" %}">Julekalender 2020</a>
-{% endcomment %}
+                            <a class="dropdown-item" href="{% url "advent_calendar" "2021" %}">Joulekalender 2021</a>
+
                     <li class="nav-item mr-1 dropdown ">
                         <a href="#ting" class="nav-link dropdown-toggle text-light" data-toggle="dropdown" id="navbarDropdown1" role="button"  aria-haspopup="true" aria-expanded="false">
                             Om Nabla
