centered paginator and made some adverts in seed

--- a/nablapps/jobs/templates/jobs/jobs_list.html
+++ b/nablapps/jobs/templates/jobs/jobs_list.html
@@ -22,7 +22,9 @@
         {% empty %}
         <p>Vi har for øyeblikket ingen stillingsannonser som matcher dine kriterier.</p>
         {% endfor %}
-        {% include "includes/pagination.html" %}
+        <div class="m-auto">
+            {% include "includes/pagination.html" %}
+        </div>
     </div>
     <div class="col-md-4">
         <div class="card pb-2">
