Only show multiwinner interface in VotingDetail when there are multiple winners

--- a/nablapps/vote/templates/vote/voting_detail.html
+++ b/nablapps/vote/templates/vote/voting_detail.html
@@ -18,34 +18,41 @@
         <a href="{% url "activate-voting" pk=object.pk redirect_to=request.path %}">Aktiver avstemningen</a>
     {% endif %}
 {% endif %}
+{% if object.num_winners > 1 %}
 <form method="POST">
     {% csrf_token %}
     <button class="btn btn-primary btn-block" type="submit">Distribute votes</button>
 </form>
+{% endif %}
 <p>{{ object.description|markdown }}</p>
 <b>Totalt antall stemmer: {{ object.get_total_votes }}</b>
 <br>
 <b>Antall vinnere: {{ object.num_winners }}</b>
 <br>
-<b>quota(vinnergrense): {{ quota }}</b>
-<br>
-<br>
-
-<h3> VINNERE: </h3>
-{% if winners %}
-<div class="alert alert-success" role="alert">
-<ul>
-{% for winner in winners %}
-
-    <li>{{ winner }}</li>
-{% endfor %}
-</ul>
-</div>
-{% else %}
-<div class="alert alert-primary" role="alert">
-    Vinnere ikke beregnet
-</div>
+{% if object.num_winners > 1 %}
+    <b>quota(vinnergrense): {{ quota }}</b>
 {% endif %}
+<br>
+<br>
+
+{% if object.num_winners > 1 %}
+    <h3> VINNERE: </h3>
+    {% if winners %}
+    <div class="alert alert-success" role="alert">
+    <ul>
+    {% for winner in winners %}
+        <li>{{ winner }}</li>
+    {% endfor %}
+    </ul>
+    </div>
+    {% else %}
+    <div class="alert alert-primary" role="alert">
+        Vinnere ikke beregnet
+    </div>
+    {% endif %}
+{# Kan eventuelt legge til en else som viser vinneren i envinneravstemning også #}
+{% endif %}
+
 <br>
 <br>
 
